--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   pie_chart: ^5.4.0
   fl_chart: ^0.35.0
   image_picker: ^1.1.0
+  firebase_messaging: ^14.7.10
+  firebase_core: ^2.24.2
+  flutter_local_notifications: ^9.8.0+1
+  geolocator: ^11.0.0
+  geocoding: ^2.0.0
+  google_places_autocomplete_text_field: ^0.1.3
   
 
   # The following adds the Cupertino Icons font to your application.
